refactor #109: 커뮤니티 글생성/삭제 댓글 배포환경 확인인